feat. add articles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>IPA Singapore</title>
       </head>
 
-    <body style="font-family:Helvetica">
+    <body style="font-family:'Trebuchet MS'">
       <header>
         <nav>
           <ul>
@@ -74,8 +74,42 @@
           </div>    
         </div>
         </div>
-      </section> 
-    
+        <article>
+          <div class="featured">
+          <div class="snapshots">
+              <div class="prayer1"><img src="assets/prayer2.jpeg" width=25%></div>
+              <div class="prayer2"><img src="assets/prayer3.jpeg" width=25%></div>
+          </div>
+          <div class="content">
+            <h2> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h2>
+            <br>The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. The prayer held at 08.00 local time was solemn, and was attended by almost 3500 Indonesian citizens who live in Singapore, including the Indonesian Ambassador to Singapore, Mr. Suryo Pratomo and his family and the Deputy Ambassador of the Republic of Indonesia, Mr. Sultistijo Djati Ismojo and his family. The prayers were also attended by officials and staff of the Indonesian Embassy in Singapore, technical attachés, and officials and staff State-Owned Enterprises in Singapore, as well as a number of officials from other countries such as Malaysia and Brunei Darussalam.
+        </div>
+        </div>
+      <dix class="others">
+      <div class="snip snip1">
+        <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
+        The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+    </div>
+    <div class="snip snip2">
+      <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
+      The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+  </div>
+  <div class="snip snip3">
+    <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
+    The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+  </div>
+  <div class="snip snip4">
+    <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
+    The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+  </div>
+  <div class="snip snip5">
+    <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
+    The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+  </div>
+  </dix>
+
+</article>
+</section> 
     <div class="container">
       <div class="regist-form" id="register-form">
         <form> 
