feat. add different articles

--- a/index.html
+++ b/index.html
@@ -87,24 +87,24 @@
         </div>
       <dix class="others">
       <div class="snip snip1">
-        <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
-        The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
-    </div>
+        <h3> Enforcement and Implementation of the Indonesia - Singapore Air Space Services Agreement </h3> <br>
+        On Friday (22/3/2024) at 03.00 Indonesia Western Time or 04.00 Singapore time, 10 officers consisting of six Indonesian Navy personnel, three tower officers from Indonesian Ministry of Transportation, and one Indonesian Airnav officer began their duties carrying out air traffic monitoring at Air Traffic Control (ATC) Changi Airport, Singapore.
+      </div>
     <div class="snip snip2">
-      <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
-      The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+      <h3> Indonesia Singapore Business Forum 2024 (ISBF) Elaborates Indonesia's Economic Policy After The 2024 General Election </h3> <br>
+    Embassy of the Republic of Indonesia in Singapore, Indonesia Investment Promotion Centre (IIPC)-Singapore—representative of the Ministry of Investment/BKPM—, together with Enterprise Singapore, fully supported by OUE, UOB and Mandala Consulting, as well as several Chambers of Commerce including the Singapore Business Federation ( SBF),...   
   </div>
-  <div class="snip snip3">
-    <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
-    The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+    <div class="snip snip3">
+    <h3> INTPREP Concluding Workshop: Collaborating For Sustainable Solutions</h3> <br>
+    The INTPREP (INtegrated Tropical Peatlands REsearch Program) Concluding Workshop, hosted at the Indonesian Embassy in Singapore, marked a pivotal moment in the journey towards sustainable development, as stakeholders gathered to share insights, explore collaborations, and unveil innovative solutions.   
   </div>
   <div class="snip snip4">
-    <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
-    The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+    <h3> State Administration Institute Tap Into Singapore Strategy In Supporting SMES </h3> <br>
+    A total of 60 participants of the National Leadership Training Level II Batch V, organized by the Indonesian State Administration Institution (LAN), visited the Indonesian Embassy in Singapore to conduct benchmarking and listen to presentations from the Singapore Cooperation Enterprise (SCE)...
   </div>
   <div class="snip snip5">
-    <h3> The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah </h3> <br>
-    The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. 
+    <h3> Indonesian Sustainable Fashion Products Penetrate The Singapore Market Through Integrated Retail Exhibition: Indonesian in SG</h3> <br>
+    The Indonesian Embassy in Singapore, in collaboration with Takashimaya Singapore, organized an integrated retail exhibition at one of the well-known shopping centers in Singapore, Takashimaya Square. 
   </div>
   </dix>
 
