feat. add custom fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>IPA Singapore</title>
       </head>
 
-    <body style="font-family:'Trebuchet MS'">
+    <body>
       <header>
         <nav>
           <ul>
@@ -74,7 +74,8 @@
           </div>    
         </div>
         </div>
-        <article>
+        <article>  
+          <h2>Featured Events</h2> <br><br>
           <div class="featured">
           <div class="snapshots">
               <div class="prayer1"><img src="assets/prayer2.jpeg" width=25%></div>
@@ -85,6 +86,7 @@
             <br>The Indonesian Embassy in Singapore held Eid al-Fitr prayers 1 Syawal 1445 Hijriah, Wednesday, 10 April 2024, at the premise of the Indonesian Embassy in Singapore. The prayer held at 08.00 local time was solemn, and was attended by almost 3500 Indonesian citizens who live in Singapore, including the Indonesian Ambassador to Singapore, Mr. Suryo Pratomo and his family and the Deputy Ambassador of the Republic of Indonesia, Mr. Sultistijo Djati Ismojo and his family. The prayers were also attended by officials and staff of the Indonesian Embassy in Singapore, technical attachés, and officials and staff State-Owned Enterprises in Singapore, as well as a number of officials from other countries such as Malaysia and Brunei Darussalam.
         </div>
         </div>
+        <br><br>  <h2>Articles</h2> <br>
       <dix class="others">
       <div class="snip snip1">
         <h3> Enforcement and Implementation of the Indonesia - Singapore Air Space Services Agreement </h3> <br>
@@ -107,9 +109,12 @@
     The Indonesian Embassy in Singapore, in collaboration with Takashimaya Singapore, organized an integrated retail exhibition at one of the well-known shopping centers in Singapore, Takashimaya Square. 
   </div>
   </dix>
-
+  
 </article>
+
+
 </section> 
+
     <div class="container">
       <div class="regist-form" id="register-form">
         <form> 
